--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+input{
+  border: 1px solid #BDBF09;
+  border-radius: 10px;
+  padding: 1rem 2rem;
+  margin: 5rem 15%;
+  width: 75%;
+}
