--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,75 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet');
+
+* {
+  box-sizing: border-box; 
+}
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.html {
-    background: url(images/bg.jpg) no-repeat center center fixed
-  }
+ /* login and register page */
+
+.loginContainer {
+  height: 100%;
+  z-index: -1;
+  vertical-align: center;
+}
+.header {
+  background: #3A2D51;
+  height: 8rem;
+  opacity: 0.9
+}
+.toggleLogin {
+  text-align: center;
+  color: #593EBC;
+  padding-top: 1rem;
+  padding-bottom: .8rem;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.7rem
+}
+.forgotPassword {
+  font-family: 'Roboto', sans-serif;
+}
+.emailLabel, .passwordLabel {
+  display: inline-block;
+  vertical-align: center;
+  color: #2C46DD;
+  padding: .5rem;
+  font-size: 1.5rem;
+  font-family: 'Montserrat', sans-serif;
+}
+.loginField {
+  vertical-align: center;
+}
+.emailInput, .passwordInput {
+  display: inline-block;
+  width: 100%;
+  padding: 1rem;
+  font-size: 1rem;
+  font-family: 'Montserrat', sans-serif;
+  vertical-align: center;
+  border: 1px solid black;
+  border-radius: .5rem;
+  font-size: 1rem;
+}
+.description{
+  text-align: left;
+  font-family: 'Roboto', sans-serif;
+  padding: .5rem;
+}
+.loginButton {
+  border: 1px solid black;
+  height: 4rem;
+  width: 4rem;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  color: black;
+  background-color: white;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 2rem;
+}
