--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet');
 @import url('https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet');
+font-family: 'Roboto Slab', serif;
 
 * {
   box-sizing: border-box; 
@@ -17,7 +18,7 @@ body {
   width: 100%;
   height: 7rem;
   padding: 1rem;
-  background-color: #3A2D51;
+  background-color: #AFB3F7;
 }
 .toggleLogin {
   text-align: center;
@@ -70,4 +71,23 @@ body {
   margin-top: 2rem;
   background-image: url(/components/Shape.svg)
 
+}
+.btn {
+  font-size: 1rem;
+  padding: 0
+}
+.listItem {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  color: #2C46DD;
+  font-size: 1.3rem;
+  font-family: 'Nunito Sans', sans-serif
+}
+.titleButton {
+  background-color: #2C46DD; 
+  border: none; 
+  color: white; 
+  padding: 1rem 1.5rem;
+  font-size: 1.5rem
 }
