--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet');
 @import url('https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet');
-font-family: 'Roboto Slab', serif;
 
 * {
   box-sizing: border-box; 
 }
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
  /* login and register page */
@@ -68,26 +67,72 @@ body {
   border-radius: 50%;
   font-size: 1.3rem;
   font-family: 'Montserrat', sans-serif;
-  margin-top: 2rem;
-  background-image: url(/components/Shape.svg)
-
+  margin-top: 1.5rem;
 }
 .btn {
   font-size: 1rem;
   padding: 0
 }
-.listItem {
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  color: #2C46DD;
-  font-size: 1.3rem;
-  font-family: 'Nunito Sans', sans-serif
-}
+
 .titleButton {
+  display: block;
+  position: relative;
+  width: cover;
   background-color: #2C46DD; 
-  border: none; 
+  margin: 0 auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   color: white; 
-  padding: 1rem 1.5rem;
-  font-size: 1.5rem
-}
+  padding: .5rem;
+  font-size: 1.5rem;
+  border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
+  -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: 1px solid #000000;
+    -moz-box-shadow:
+      0px 1px 3px rgba(000,000,000,0.5),
+      inset 0px 0px 5px #AFB3F7;
+    -webkit-box-shadow:
+      0px 1px 3px rgba(000,000,000,0.5),
+      inset 0px 0px 5px #AFB3F7;
+    box-shadow:
+      0px 1px 3px rgba(000,000,000,0.5),
+      inset 0px 0px 5px #AFB3F7;
+    text-shadow:
+      0px -1px 3px #AFB3F7,
+      0px 1px 0px #AFB3F7;
+  }
+  
+  /* titles */
+  h1.titles {
+    margin: 0 auto;
+    font-size: 1.5rem;
+    text-align: center;
+    color: black;
+    font-family: 'Roboto Slab', serif;
+  }
+
+  .calendarItem {
+    width: 100%;
+    text-align: center;
+    padding: .3rem;
+  }
+  .itemList {
+    margin: 0 auto;
+    text-align: center;
+    color: #2C46DD;
+    font-size: 1.5rem;
+    font-family: 'Nunito Sans', sans-serif
+  }
+  .listItem {
+    margin: 0 auto;
+    text-align: center;
+    color: #2C46DD;
+    font-size: 1.5rem;
+    font-family: 'Nunito Sans', sans-serif
+  }
+  i {
+    padding: .3rem;
+  }
