--- a/src/App.css
+++ b/src/App.css
@@ -52,12 +52,16 @@ body {
   font-size: 1rem;
 }
 .description{
-  text-align: left;
+  text-align: center;
   font-family: 'Roboto', sans-serif;
+  margin-top: 2.5rem;
   padding: .5rem;
 }
 .loginButton {
   height: 5rem;
+  box-shadow: 0 2px 2px #888888;
+  transition: color 0.3s;
+  background-image: 0.5s, ease-in-out;
   width: 5rem;
   margin: 0 auto;
   display: flex;
