--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
 }
 #finalLogo {
   width: 100%;
-  height: 7rem;
+  height: 5rem;
   padding: 1rem;
   background-color: #AFB3F7;
 }
@@ -139,4 +139,9 @@ body {
   }
   i {
     padding: .3rem;
+  }
+  
+  .four-col-grid .grid-item  {
+    width: 33.33333%;
+    float: left;
   }
