--- a/src/App.css
+++ b/src/App.css
@@ -141,7 +141,49 @@ body {
     padding: .3rem;
   }
   
-  .four-col-grid .grid-item  {
-    width: 33.33333%;
+  /* week view */
+  .weekRange {
+    margin: 0 auto;
+    text-align: center;
+    width: 100%
+  }
+
+  .titleButtonToggle {
+      background-color: #2C46DD; 
+      color: white; 
+      padding: .5rem;
+      margin: .3rem;
+
+      font-size: 1rem;
+      border-radius: 5px;
+      font-family: 'Roboto', sans-serif;
+      -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: 1px solid #000000;
+    -moz-box-shadow:
+      0px 1px 3px rgba(000,000,000,0.5),
+      inset 0px 0px 5px #AFB3F7;
+    -webkit-box-shadow:
+      0px 1px 3px rgba(000,000,000,0.5),
+      inset 0px 0px 5px #AFB3F7;
+    box-shadow:
+      0px 1px 3px rgba(000,000,000,0.5),
+      inset 0px 0px 5px #AFB3F7;
+    text-shadow:
+      0px -1px 3px #AFB3F7,
+      0px 1px 0px #AFB3F7;
+  }
+    
+  .currentDate {
+    font-size: 1.5rem;
+    font-family: 'Roboto Slab', serif;
+  }
+  .column {
+    width: 100%;
+    display: block
+  }
+  .column {
+    width: 33.3333%;
     float: left;
   }
