--- a/src/App.css
+++ b/src/App.css
@@ -9,18 +9,7 @@ body {
   padding: 0;
 }
  /* login and register page */
-/* header {
-  padding-bottom: .5rem
-} */
-.loginContainer {
-  height: 100%;
-}
-#finalLogo {
-  width: 100%;
-  height: 5rem;
-  padding: 1rem;
-  background-color: #AFB3F7;
-}
+
 .toggleLogin {
   text-align: center;
   vertical-align: center;
@@ -140,7 +129,7 @@ body {
     font-family: 'Nunito Sans', sans-serif
   }
   i {
-    padding: .3rem;
+    padding: .1rem;
     border: 0;
     background: white
   }
@@ -191,6 +180,7 @@ body {
   }
   .column3 {
     width: 33.3333%;
+    font-size: 1rem;
     float: left;
   }
   .request-unavailable-btn  {
@@ -226,6 +216,8 @@ body {
       margin: .3rem;
       font-size: 1rem;
       border-radius: 5px;
+      margin: 0 auto 0;
+      vertical-align: center;
       font-family: 'Roboto', sans-serif;    
   }
   .DayPickerInput {
@@ -353,10 +345,11 @@ body {
     width: 100%
   }
   .container {
-    width: 350px;
+    width: 310px;
     height: 80px;
     border: 1px solid lightgrey;
     border-radius: .5rem;
+    padding-bottom: .2rem;
     overflow: auto;
     background-color: linen;
     text-align: center;
@@ -377,3 +370,40 @@ body {
     color: #3A2D51;
     font-family: 'Roboto Slab', serif;
   }
+  .center {
+    margin: 0 auto 0;
+    text-align: center;
+    padding: .7rem
+  }
+  .headerSpreader {
+  width: 100%;
+  height: 1.5rem;
+  display: block;
+  background-color: #AFB3F7;
+}
+  #home {
+    font-size: 1rem;
+    float: left;
+    color:#3A2D51
+  }  
+  #logout {
+    font-size: 1rem;
+    float: right;
+    color:#3A2D51
+  }
+header {
+  height: 5rem;
+} 
+.loginContainer {
+  height: 100%;
+}
+#finalLogo {
+  width: 100%;
+  height: 5rem;
+  padding: 1rem 1rem 0 1rem;
+  background-color: #AFB3F7;
+}
+
+.ii {
+  background-color: #AFB3F7; 
+}
