styling on day and week view

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@
   box-sizing: border-box; 
 }
 body {
-  margin: 0 auto;
+  margin: 0 auto 0;
   padding: 0;
+  max-width: 100%
 }
  /* login and register page */
 
@@ -76,7 +77,7 @@ body {
   background-color: #2C46DD; 
   margin: 0 auto;
   margin-top: 1rem;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
   color: white; 
   padding: .5rem;
   font-size: 1.5rem;
@@ -103,6 +104,8 @@ body {
   /* titles */
   h1.titles {
     margin: 0 auto;
+    padding-top: .3rem;
+    padding-bottom: .3rem;
     font-size: 1.5rem;
     text-align: center;
     color: #3A2D51;
@@ -112,20 +115,21 @@ body {
   .calendarItem {
     width: 100%;
     text-align: center;
-    padding: .3rem;
+    padding: .1rem;
+    line-height: 2.4rem
   }
   .itemList {
     margin: 0 auto;
     text-align: center;
     color: #2C46DD;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-family: 'Nunito Sans', sans-serif
   }
   .listItem {
     margin: 0 auto;
     text-align: center;
     color: #2C46DD;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-family: 'Nunito Sans', sans-serif
   }
   i {
@@ -136,9 +140,9 @@ body {
   
   /* week view */
   .weekRange {
-  
     text-align: center;
     vertical-align: center;
+    padding-top: 1rem;
     max-width: 100%
   }
 
@@ -169,19 +173,8 @@ body {
   }
     
   .currentDate {
-    font-size: 1.5rem;
-    font-family: 'Roboto Slab', serif;
-  }
-  .columns3 {
-    width: 100%;
-    display: block;
-    max-width: 650px;
-    margin: 0 auto 0;
-  }
-  .column3 {
-    width: 33.3333%;
-    font-size: 1rem;
-    float: left;
+    font-size: 1.4rem;
+    font-family: 'Roboto Slab', serif, bold;
   }
   .request-unavailable-btn  {
     background-color: red !important;
@@ -203,7 +196,7 @@ body {
     margin-bottom: .5rem
   }
   .day {
-    margin: 0 auto;
+    margin: 0 auto 0;
     text-align: center;
     color: #2C46DD;
     font-size: 1.5rem;
@@ -232,8 +225,14 @@ body {
     margin: 0 auto 0;
   }
   .itemList1 {
-    padding-top: 1.5rem;
-    margin: 0 auto;
+    margin-top: 1rem;
+    text-align: center;
+    color: black;
+    font-size: 1.5rem;
+    font-family: 'Nunito Sans', sans-serif
+  }
+  #itemList1 {
+    margin-top: 1rem;
     text-align: center;
     color: black;
     font-size: 1.5rem;
@@ -273,16 +272,17 @@ body {
   .formInput {
     display: inline-block;
     width: 100%;
-    padding: 1rem;
+    padding: .2rem;
     font-size: 1rem;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     vertical-align: center;
     border: 1px solid #3A2D51;
     border-radius: .5rem;
-    max-width: 600px;
-    font-size: 1rem;
+    max-width: 310px;
+    font-size: 1.5rem;
   }
+
   .timeSelector {
     font-size: 1rem;
     text-align: center;
@@ -319,11 +319,10 @@ body {
     font-size: 1rem;
   }
   #role.selector {
-    font-size: 1.5rem;
+    font-size: 1rem;
     vertical-align: center;
     width: 8rem;
     height: 2rem;
-    margin: 0 auto 0;
     color: #2C46DD;
     border: 1px dotted #3A2D51;
   }
@@ -339,7 +338,8 @@ body {
     border-radius: .5rem;
     max-width: 600px;
     font-size: 1rem;
-    margin-top:.6rem
+    margin-top:.6rem;
+    margin-bottom: 1rem
   }
   .loginField {
     width: 100%
@@ -370,27 +370,12 @@ body {
     color: #3A2D51;
     font-family: 'Roboto Slab', serif;
   }
-  .center {
+  /* #center {
     margin: 0 auto 0;
     text-align: center;
     padding: .7rem
-  }
-  .headerSpreader {
-  width: 100%;
-  height: 1.5rem;
-  display: block;
-  background-color: #AFB3F7;
-}
-  #home {
-    font-size: 1rem;
-    float: left;
-    color:#3A2D51
-  }  
-  #logout {
-    font-size: 1rem;
-    float: right;
-    color:#3A2D51
-  }
+  } */
+
 header {
   height: 5rem;
 } 
@@ -407,3 +392,55 @@ header {
 .ii {
   background-color: #AFB3F7; 
 }
+
+
+.headerSpreader {
+  width: 100%;
+  height: 2rem;
+  flex-wrap: wrap;
+  display: flex;
+  background-color: #AFB3F7;
+}
+
+.header#home {
+  width: 35%;
+  font-size: 1.2rem;
+  color:#3A2D51;
+  padding-left: .2rem
+}
+  .header#logout {
+    width: 35%;
+    font-size: 1.2rem;
+    color:#3A2D51;
+    text-align: right;
+    padding-right: .2rem
+  }
+  .header#center {
+    width: 30%;
+    text-align: center;
+    margin-top: .5rem;
+    font-size: .8rem;
+    color: #3A2D51;
+  }
+
+  .centerUpdate {
+    text-align: center;
+  }
+  .columns3 {
+    width: 100%;
+    padding-top: .5rem;
+    display: flex;
+    margin: 0 auto 0;
+    flex-wrap: wrap;
+    max-width: 650px;  
+  }
+  .column3 {
+    width: 33%;
+    text-align: center;
+    font-size: 1rem;
+    color: black;
+    background-color: lightcyan
+  }
+  .enclosingDiv {
+    margin-top: 2rem
+  }
