--- a/src/App.css
+++ b/src/App.css
@@ -464,6 +464,47 @@ header {
   .enclosingDiv {
     margin-top: 2rem
   }
-  .box {
-    border: 1px solid lightgrey;
+  .loader {
+    position: absolute;
+    top: 50%;
+    left: 48%;
   }
+  
+  .line {
+    animation: expand 1s ease-in-out infinite;
+    border-radius: 10px;
+    display: inline-block;
+    transform-origin: center center;
+    margin: 0 3px;
+    width: 1px;
+    height: 25px;
+  }
+  
+  .line:nth-child(1) {
+    background: #95CEDB;
+  }
+  
+  .line:nth-child(2) {
+    animation-delay: 180ms;
+    background: #2C46DD;
+  }
+  
+  .line:nth-child(3) {
+    animation-delay: 360ms;
+    background: #593EBC;
+  }
+  
+  .line:nth-child(4) {
+    animation-delay: 540ms;
+    background: #763FC1;
+  }
+  
+  @keyframes expand {
+    0% {
+      transform: scale(1);
+    }
+    25% {
+      transform: scale(2);
+    }
+  }
+  
