--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
 
 * {
   box-sizing: border-box; 
+  
 }
 body {
   margin: 0 auto 0;
   padding: 0;
-  max-width: 100%
+  
 }
  /* login and register page */
 
@@ -82,10 +83,11 @@ body {
 .titleButton {
   display: block;
   position: relative;
-  width: cover;
+  /* width: cover; */
   background-color: #2C46DD; 
   margin: 0 auto;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
+  margin-bottom: .5rem;
   /* margin-bottom: 1rem; */
   color: white; 
   padding: .5rem;
@@ -113,9 +115,9 @@ body {
   /* titles */
   h1.titles {
     margin: 0 auto;
-    padding-top: .3rem;
-    padding-bottom: .3rem;
-    font-size: 1.5rem;
+    padding-top: 1.2rem;
+    padding-bottom: .5rem;
+    font-size: 1.3rem;
     text-align: center;
     color: #3A2D51;
     font-family: 'Roboto Slab', serif;
@@ -182,7 +184,8 @@ body {
   }
     
   .currentDate {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
+    padding: .2rem;
     font-family: 'Roboto Slab', serif, bold;
   }
   .request-unavailable-btn  {
@@ -197,18 +200,24 @@ body {
   }
   .column2 {
     width: 50%;
-    text-align: center
+    font-size: 1.1rem;
+    text-align: center;   
+    color: #2C46DD;
+    line-height: 2rem;
+
   }
-  .button {
-    border: 1px black;
-    margin-bottom: .5rem
-  }
+
   .day {
     margin: 0 auto 0;
     text-align: center;
     color: #2C46DD;
     font-size: 1.5rem;
-    font-family: 'Nunito Sans', sans-serif
+    line-height: 2.5rem;
+    border: 1px grey;
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #95CEDB;
+    width: 100%;
+    max-width: 650px; 
   }
   .navButtons {
       background-color: #2C46DD; 
@@ -221,13 +230,113 @@ body {
       vertical-align: center;
       font-family: 'Roboto', sans-serif;    
   }
+  .requestSwap {
+    background-color: white;
+    color: #2C46DD; 
+    padding: .5rem;
+    margin-top: .3rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    padding-left: .2rem;
+    padding-right: .2rem;
+    margin: 0 auto 0;
+    vertical-align: center;
+    font-family: 'Roboto', sans-serif;
+    border: 1px solid #2C46DD    
+}
+.requestSwap1 {
+    position: left;
+    width: cover;
+    margin: 0 auto 0;
+    margin-right: 1rem;
+    margin-bottom: .3rem;
+    /* margin-bottom: 1rem; */
+    color: white; 
+    padding: .2rem;
+    font-size: 1.3rem;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
+    -moz-border-radius: 10px;
+      -webkit-border-radius: 10px;
+      border-radius: 10px;
+      border: 1px solid #000000;
+      -moz-box-shadow:
+        0px 1px 3px rgba(000,000,000,0.5),
+        inset 0px 0px 5px #AFB3F7;
+      -webkit-box-shadow:
+        0px 1px 3px rgba(000,000,000,0.5),
+        inset 0px 0px 5px #AFB3F7;
+      box-shadow:
+        0px 1px 3px rgba(000,000,000,0.5),
+        inset 0px 0px 5px #AFB3F7;
+      text-shadow:
+        0px -1px 3px #AFB3F7,
+        0px 1px 0px #AFB3F7;
+    
+
+  background-color:#593EBC;
+  
+}
+.requestSwap2 {
+  position: right;
+  width: cover;
+
+  margin: 0 auto;
+  margin-bottom: .3rem;
+  /* margin-bottom: 1rem; */
+  color: white; 
+  padding: .2rem;
+  font-size: 1.3rem;
+  border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
+  -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: 1px solid #000000;
+    -moz-box-shadow:
+      0px 1px 3px rgba(000,000,000,0.5),
+      inset 0px 0px 5px #AFB3F7;
+    -webkit-box-shadow:
+      0px 1px 3px rgba(000,000,000,0.5),
+      inset 0px 0px 5px #AFB3F7;
+    box-shadow:
+      0px 1px 3px rgba(000,000,000,0.5),
+      inset 0px 0px 5px #AFB3F7;
+    text-shadow:
+      0px -1px 3px #AFB3F7,
+      0px 1px 0px #AFB3F7;
+  
+
+background-color:#593EBC;
+
+}
+  .requestSwap3 {
+    background-color: white;
+    color: #F6BD60; 
+    padding: .5rem;
+    margin-top: .3rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    padding-left: .2rem;
+    padding-right: .2rem;
+    margin: 0 auto 0;
+    vertical-align: center;
+    font-family: 'Roboto', sans-serif;
+    border: 1px solid#F6BD60  
+}
   .DayPickerInput {
     margin: .3rem;
     font-size: 1rem;
     text-align: center;
     border-radius: 5px;
     width: 6rem;
-    font-family: 'Roboto', sans-serif;    
+    font-family: 'Roboto', sans-serif;
+    border: 1px black;
+    background-color: transparent;
+    background-image: none;
+    box-shadow: none;
+    color: #4A90E2;
+    cursor: pointer;    
 }
   .requestOffAndCopy {
     text-align: center;
@@ -235,7 +344,7 @@ body {
     margin: 0 auto 0;
   }
   .itemList1 {
-    margin-top: .5rem;
+    margin-top: 1.2rem;
     text-align: center;
     color: black;
     font-size: 1.5rem;
@@ -256,6 +365,14 @@ body {
     color: #4A90E2;
     font-size: 0.875em;
     cursor: pointer;
+  }
+  #DayPickerInput-Overlay {
+    position: absolute;
+    left: 0;
+    z-index: 1;
+  
+    background: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
   }
   input {
     border: 1px black;
@@ -373,11 +490,12 @@ body {
     margin: 0 auto 0
   }
   .itemList3 {
-    padding-top:.2rem;
+    padding-top:.6rem;
     margin: 0 auto;
     text-align: center;
     color: black;
-    font-size: 1rem;
+    font-size: 1.1rem;
+    line-height: 2 rem;
     font-family: 'Nunito Sans', sans-serif
   }
   .titles {
@@ -449,14 +567,16 @@ header {
     display: flex;
     margin: 0 auto 0;
     flex-wrap: wrap;
-    max-width: 650px;  
+    max-width: 650px; 
+    background-color: whitesmoke
   }
   .column3 {
     width: 33%;
     text-align: center;
-    font-size: 1rem;
-    color: black;
-    background-color: lightcyan
+    font-size: 1.2rem;
+    color: #2C46DD;
+    margin-bottom: .5rem;
+    padding: 1px 1px 1px 5px
   }
   .enclosingDiv {
     margin-top: 2rem
@@ -589,3 +709,13 @@ header {
       transform: rotate(360deg);
     }
   }
+
+  .whitespace {
+    line-height: 1
+  }
+.date {
+  border: 1px dotted grey;
+}
+.number {
+  border: 1px dotted grey;
+}
